# Vits2-onnx-cpp

./: CMakeLists.txt  README.md
Linux/: main.cpp
Linux/src/: phonemize.cpp
MSCV/: Vits2-onnx-cpp.sln  Vits2-onnx-cpp.vcxproj  VitsONNX.cpp  VitsONNX.h  main.cpp  phonemize.cpp  phonemize.h  wavfile.h
include/: phonemize.h
